--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,17 @@
 /build
 
 # misc
+.idea
+.vscode
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
+!.local.env
+package.lock.json
+yarn.lock
 
 npm-debug.log*
 yarn-debug.log*
